nginx-ingress-stack-configurable/templates/test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: {SERVICE_NAME}
  namespace: {DEFAULT_NAMESPACE}
  labels:
    app: {SERVICE_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: {SERVICE_NAME}
  template:
    metadata:
      labels:
        app: {SERVICE_NAME}
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: {SERVICE_PORT}
---
apiVersion: v1
kind: Service
metadata:
  name: {SERVICE_NAME}
  namespace: {DEFAULT_NAMESPACE}
  labels:
    app: {SERVICE_NAME}
spec:
  ports:
  - port: {SERVICE_PORT}
    targetPort: {SERVICE_PORT}
    protocol: TCP
    name: http
  selector:
    app: {SERVICE_NAME}
