nginx-ingress-stack-configurable/templates/app-ingress-basic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-basic
  namespace: {DEFAULT_NAMESPACE}
  annotations:
    cert-manager.io/cluster-issuer: {CERT_ISSUER}
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-secret
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - {DOMAIN}
      secretName: tls-secret
  rules:
    - host: {DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: {SERVICE_NAME}
                port:
                  number: {SERVICE_PORT}
