nginx-ingress-stack-configurable/templates/app-ingress-oauth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-oauth
  namespace: {SERVICE_NAMESPACE}
  annotations:
    cert-manager.io/cluster-issuer: {CERT_ISSUER}
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-User,X-Auth-Request-Email,X-Forwarded-User,X-Auth-Request-Groups"
    # Use simplest form of auth-url with port number
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-oauth2-proxy.{SERVICE_NAMESPACE}.svc.cluster.local/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://{DOMAIN}/oauth2/start?rd=https://$host$request_uri"
    # Add a response buffer to prevent upstream sent too big header errors
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - {DOMAIN}
      secretName: tls-secret
  rules:
    - host: {DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: {SERVICE_NAME}
                port:
                  number: {SERVICE_PORT}
