nginx-ingress-stack-configurable/templates/app-ingress-simple.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  namespace: {DEFAULT_NAMESPACE}
  annotations:
    # Don't include any cert-manager annotations for this simple test
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  # No TLS for this test
  rules:
    - host: {DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: {SERVICE_NAME}
                port:
                  number: {SERVICE_PORT}
