nginx-ingress-stack-configurable/templates/oauth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth-ingress
  namespace: {DEFAULT_NAMESPACE}
  annotations:
    cert-manager.io/cluster-issuer: {CERT_ISSUER}
spec:
  ingressClassName: nginx
  rules:
    - host: {DOMAIN}
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-oauth2-proxy
                port:
                  number: 80
